# shirel-beauty

./: .gitignore  docker-compose.yml  sanity.sh
api/: .env.dev  .env.example  .gitignore  Dockerfile  pyproject.toml
api/app/: db.py  main.py  models.py  notifications.py  scheduler.py  schemas.py
api/app/core/: config.py
api/app/routers/: appointments.py  availability.py  dev.py  overrides.py  services.py
app-mobile/: .en  .env.example  .gitignore  app.config.ts  app.json  package-lock.json  package.json  pnpm-lock.yaml
app-mobile/app/: _layout.tsx  admin-login.tsx  admin.tsx  confirm.tsx  date.tsx  hours.tsx  index.tsx  times.tsx
app-mobile/app/(booking)/: _layout.tsx  date.tsx  index.tsx  times.tsx
app-mobile/components/: PhoneInputIL.tsx
app-mobile/lib/: api.ts  auth.ts  phone.ts
app-mobile/utils/: phone.ts
