[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Michael Agarkov <michaelagarkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.42"
asyncpg = "^0.30.0"
alembic = "^1.16.4"
pydantic-settings = "^2.10.1"
python-dateutil = "^2.9.0.post0"
apscheduler = "^3.10.4"
twilio = "^9.2.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.8"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
